apps/freshrss/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: freshrss-db
  annotations:
    stash.appscode.com/backup-blueprint: app-backup
    stash.appscode.com/target-paths: "/var/lib/mysql"
    stash.appscode.com/volume-mounts: "data:/var/lib/mysql"
spec:
  replicas: 1  
  selector:
    matchLabels:
      app: freshrss-db
  serviceName: freshrss-db
  template:
    metadata:
      labels:
        app: freshrss-db
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - image: mariadb:10
          imagePullPolicy: Always
          name: freshrss-db
          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: longhorn
        resources:
          requests:
            storage: 1Gi
