apps/freshrss/statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: freshrss-db
spec:
  selector:
    matchLabels:
      app: freshrss
      component: mariadb
  serviceName: freshrss-db
  template:
    metadata:
      labels:
        app: freshrss
        component: mariadb
    spec:
      containers:
        - image: docker.io/library/mariadb:10.11.3
          name: mariadb
          ports:
            - containerPort: 3306
              name: mariadb
          readinessProbe:
            exec:
              command:
                - bash
                - "-c"
                - "mysql --host=localhost --user=${MYSQL_USER} --password=${MYSQL_PASSWORD} --execute 'SELECT 1'"
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: freshrss-web
spec:
  selector:
    matchLabels:
      app: freshrss
      component: freshrss
  serviceName: freshrss
  template:
    metadata:
      labels:
        app: freshrss
        component: freshrss
    spec:
      containers:
        - image: docker.io/freshrss/freshrss:1.21.0
          name: freshrss
          readinessProbe:
            httpGet:
              path: /i/
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: data
              mountPath: /var/www/FreshRSS/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
        storageClassName: longhorn
