apps/freshrss/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freshrss
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      containers:
        - image: freshrss/freshrss:1.15.3
          name: freshrss
          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"
          volumeMounts:
            - name: freshrss-data
              mountPath: /var/www/FreshRSS/data
      volumes:
        - name: freshrss-data
          persistentVolumeClaim:
            claimName: freshrss-data-hostpath
