apps/freshrss/web-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: freshrss-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freshrss
  serviceName: freshrss-web
  template:
    metadata:
      labels:
        app: freshrss
    spec:
      containers:
        - image: freshrss/freshrss:1.16.0
          name: freshrss
          resources:
            requests:
              cpu: "50m"
              memory: "100Mi"
          volumeMounts:
            - name: data
              mountPath: /var/www/FreshRSS/data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: iscsi-volume
        resources:
          requests:
            storage: 100Mi
