apps/freshrss/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss-db
spec:
  ports:
    - port: 3306
  selector:
    app: freshrss-db
