apps/freshrss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
spec:
  ports:
    - port: 80
  selector:
    app: freshrss
    component: freshrss
