apps/freshrss/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss-db
spec:
  ports:
    - port: 3306
  selector:
    app: freshrss
    component: mariadb
---
apiVersion: v1
kind: Service
metadata:
  name: freshrss
spec:
  ports:
    - port: 80
  selector:
    app: freshrss
    component: freshrss
