apps/freshrss/web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: freshrss
spec:
  tls:
    - hosts:
      - rss.hubbe.club  
  rules:
    - host: rss.hubbe.club
      http:
        paths:
          - path: /
            backend:
              serviceName: freshrss
              servicePort: 80
